--- a/Yahoo_Finance.ipynb
+++ b/Yahoo_Finance.ipynb
@@ -130,7 +130,7 @@
     {
       "cell_type": "code",
       "source": [
-        "apikey=\"62C8eHLy9v6odOKZlp2NrnUyeRYEGUT9A3BcHBdj\"\n",
+        "apikey=\"\"\n",
         "\n",
         "url = \"https://yfapi.net/v6/finance/quote\"\n",
         "\n",
